<resources>
    <string name="app_name">Teletool</string>
    <string name="action_settings">Settings</string>
    <string name="seccion_1">Página Principal</string>
    <string name="seccion_2">Perfil</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Sincronizar BD</string>
    <string name="opcion_2">DB Test</string>
    <string name="opcion_3">Iniciar Sesión</string>
    <string name="seccion_3">Ejercicio</string>
    <string name="seccion_4">Calendario</string>
    <string name="seccion_5">Instituciones</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Página Principal</string>
    <string name="fragment2">Perfil</string>
    <string name="fragment3">Ejercicio</string>
    <string name="fragment4">Estadisticas</string>
</resources>
